codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_doctor_report.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 725
expression: rendered
---
上传日志？

将发送以下文件：
  • codex-logs.log
  • codex-doctor-report.json
  • codex-apps-tools-cache.json（如可用）
  • codex-app-directory-cache.json（如可用）
  • rollout.jsonl
  • auto-review-rollout.jsonl
