codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_other.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 请提供更多信息（其他）
▌
▌ （可选）简要说明情况，以帮助我们进一步改进

按下 Enter 以确认，或按下 Esc 以返回
