codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_safety_check.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 请提供更多信息（安全检查）
▌
▌ （可选）说明哪些内容遭到拒绝，以及为何应该允许

按下 Enter 以确认，或按下 Esc 以返回
